# codat-docs

./: .env.example  .gitignore  .markdownlint.json  .npmrc  .prettierrc.js  .vale.ini  20251003_productdeprecations.md  251003-deprecations-of-legacy-products.md  CLAUDE.md  CONTRIBUTING.md  README.md  _count.ps1  _find_missing.ps1  codat-docs.sln  crowdin.yml  cspell-words.txt  cspell.json  docusaurus.config.js  link-results.json  llms.txt  nav.config.js  output.txt  package-lock.json  package.json  redirects.config.js  sidebars.js  vercel.json
.claude/: settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  (+2 more)
code_utils/: README.md  check_extracted_code.py  code_checker.py  code_defaults.json  code_finder.py  extract_code_from_files.py  main.py  pyproject.toml
code_utils/code_checker/: __init__.py  codat_code_checker_config_models.py  code_checker.py  docker_operator.py
code_utils/code_checker/docker/: .dockerignore
code_utils/code_checker/docker/csharp/: CodatSnippets.csproj  Dockerfile  validate-csharp-snippets.sh
code_utils/code_checker/docker/javascript/: .npmrc  Dockerfile  package.json
code_utils/code_checker/docker/python/: Dockerfile  requirements.txt
code_utils/code_finder/: __init__.py  codat_code_config_models.py  code_config.py  code_finder.py  file_operator.py
code_utils/docker/: Dockerfile  build.bat  build.sh  package.json  requirements.txt  tsconfig.json
code_utils/tests/: __init__.py  conftest.py
code_utils/tests/test_code_checker/: conftest.py  test_code_checker.py
code_utils/tests/test_code_finder/: __init__.py  test_code_finder.py
(+2098 files in other folders)
