[project]
name = "code-utils"
version = "0.1.0"
description = "Utilities for extracting and managing code snippets from Codat documentation"
authors = [
    {name = "Codat Documentation Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["code_finder"]
